<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">WOSOL</string>
    <string name="action_settings">Settings</string>
    <string name="total">Total</string>
    <string name="barcode">Barcode</string>
    <string name="password">password</string>
    <string name="mobile">mobile</string>
    <string name="cancel">Cancel</string>
    <string name="clear">Clear</string>
    <string name="edit">Edit</string>
    <string name="confirm">Done</string>
    <string name="date">Date</string>
    <string name="date_added">Date Added</string>
    <string name="quantity">Quantity</string>
    <string name="remove">Remove</string>
    <string name="scan">Scan</string>
    <string name="unit_price">Unit Price</string>
    <string name="name">Name</string>
    <string name="id">ID</string>
    <string name="cash">Cash</string>
    <string name="change">Change</string>
    <string name="hint_search">Enter name or barcode</string>
    <string name="hint_cash">Enter cash here</string>
    <string name="add_new_product">Add New Product</string>
    <string name="add_stock">Add A Product Lot</string>
    <string name="previous">&lt;</string>
    <string name="next">></string>
    <string name="inventory">Inventory</string>
    <string name="sale">Sale</string>
    <string name="report">Report</string>

    <string name="dialog_quit">Are you sure you want to QUIT?</string>
    <string name="dialog_remove_product">Are you sure you want to REMOVE this product?</string>
    <string name="dialog_clear_sale">Are you sure you want to CLEAR this sale?</string>
    <string name="hint_empty_sale">Sale is empty.</string>
    <string name="quit">Quit</string>
    <string name="no">No</string>
    <string name="product_detail">Product Detail</string>
    <string name="stock">Stock</string>
    <string name="success">Success</string>
    <string name="fail">Fail</string>
    <string name="please_input_all">Please fulfill all data.</string>
    <string name="need_money">Need</string>


    <string name="lang_th">ภาษาไทย (th)</string>
    <string name="lang_jp">日本語 (jp)</string>
    <string name="hint_lang">Please restart the application to apply this language settings.</string>
    <string name="login">Login</string>
    <string name="skip">Skip</string>
    <string name="email">E-mail</string>
    <string name="Loading">Loading..</string>
    <string name="erroremail">Email is required field</string>
    <string name="errorpassword">Password is required field</string>
    <string name="network_error_title">Network Error</string>
    <string name="network_error_contant">please try to open wifi or mobile data and try again</string>
    <string name="logout">Logout</string>
    <string name="orderSubmited">The oder submited successfully</string>
    <string name="refresh">Refresh</string>
    <string name="lang_ar">عربي</string>
    <string name="quantityerror">The required quantity does not exist</string>
    <string name="ReorderQuantity">Reorder Quantity</string>
    <string name="price_type">Price Type</string>
    <string name="store">Store</string>
    <string name="counter">Counter</string>
    <string name="submitordererror">Could not send request</string>
    <string name="backtosale">Back to Sale</string>
    <string name="removesale">Remove Sale</string>
    <string name="invalidlogin">Invalid UserName or Password</string>
    <string name="selectoffice">Select Office</string>
    <string name="login_lang_ar">عربي</string>
    <string name="login_lang_en">English</string>


    <string-array name="period">
        <item>Daily</item>
        <item>Weekly</item>
        <item>Monthly</item>
        <item>Yearly</item>
    </string-array>

    <string-array name="lang">
        <item>Select language </item>
        <item>Arabic</item>
        <item>English</item>
    </string-array>


    <style name="ButtonText">
        <item name="android:layout_width">fill_parent</item>
        <item name="android:layout_height">wrap_content</item>
        <item name="android:textColor">#ffffff</item>
        <item name="android:gravity">center</item>
        <item name="android:layout_margin">3dp</item>
        <item name="android:textSize">20sp</item>
        <item name="android:textStyle">bold</item>
        <item name="android:shadowColor">#000000</item>
        <item name="android:shadowDx">1</item>
        <item name="android:shadowDy">1</item>
        <item name="android:shadowRadius">2</item>
    </style>

    <string name="lang_en">انجليزي</string>

</resources>