<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_paymentDialog"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_marginBottom="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/total"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/payment_total"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:textSize="30sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_marginBottom="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="0dp"
            android:layout_weight="0.4"
            android:layout_height="wrap_content"
            android:text="@string/cash"
            android:layout_gravity="center"
            android:gravity="center"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/dialog_saleInput"
            android:layout_width="0dp"
            android:layout_weight="0.6"
            android:layout_height="wrap_content"
            android:ems="20"
            android:hint="@string/hint_cash"
            android:inputType="number" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/price_type"
                android:layout_weight="0.4"
                android:gravity="center"
                android:layout_gravity="center"
                android:textSize="20dp"
                />
            <Spinner
                android:id="@+id/spinner1"
                android:gravity="center"
                android:padding="3dp"
                android:layout_weight="0.6"
                android:spinnerMode="dropdown"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <TextView
                android:layout_width="0dp"
                android:layout_weight="0.4"
                android:layout_height="wrap_content"
                android:text="@string/store"
                android:textSize="20dp"
                android:layout_gravity="center"
                android:gravity="center"
                />
            <Spinner
                android:id="@+id/spinner2"
                android:layout_weight="0.6"
                android:padding="3dp"
                android:layout_width="0dp"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <TextView
                android:layout_width="0dp"
                android:layout_weight="0.4"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_height="wrap_content"
                android:text="@string/counter"
                android:textSize="20dp"
                />
            <Spinner
                android:id="@+id/spinner3"
                android:layout_weight="0.6"
                android:layout_width="0dp"
                android:padding="3dp"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/clearButton"
            style="@style/ButtonText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/btn_yellow"
            android:text="@string/cancel"
            android:textSize="20sp" />

        <Button
            android:id="@+id/confirmButton"
            style="@style/ButtonText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/btn_green"
            android:text="@string/confirm"
            android:textSize="20sp" >
        </Button>
    </LinearLayout>
</LinearLayout>