<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/colorPrimary"
    android:layout_height="match_parent"
    tools:context="com.refresh.pos.ui.LoginActivity"
    android:fitsSystemWindows="true">

<LinearLayout
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="56dp"
    android:paddingBottom="56dp"
    android:layout_gravity="center"
    android:paddingLeft="24dp"

    android:paddingRight="24dp">
    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/logo"
        android:background="@drawable/rounded_bg"
        android:layout_gravity="center"
        />

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/btn_white"
        android:hint="@string/email"
        android:padding="10dp"
        android:layout_marginBottom="10dp"
          />

    <EditText
        android:id="@+id/passWord"
        android:padding="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/btn_white"
        android:hint="@string/password"
        android:inputType="textPassword"
      />
    <Spinner
        android:id="@+id/Branches_sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:padding="10dp"
        android:background="@drawable/btn_white"
        android:layout_marginBottom="100dp"
        >

    </Spinner>


    <Button
        android:id="@+id/loginButton"
        style="@style/ButtonText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="@dimen/_30sdp"
        android:layout_marginBottom="@dimen/_10sdp"
        android:background="@drawable/btn_blue"
        android:text="@string/login"

       />

    <Button
        android:id="@+id/skipbtn"
        style="@style/ButtonText"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="@dimen/_30sdp"
        android:background="@drawable/btn_blue"
       />



</LinearLayout>


</ScrollView>